Repository layer with DI

--- a/ReportHub/ReportHub.API/ReportHub.API.csproj
+++ b/ReportHub/ReportHub.API/ReportHub.API.csproj
@@ -24,6 +24,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\ReportHub.Application\ReportHub.Application.csproj" />
+		<ProjectReference Include="..\ReportHub.Infrastructure\ReportHub.Infrastructure.csproj" />
 	</ItemGroup>
 
 </Project>
