--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoDb": {
+    "ConnectionString": "mongodb://admin:admin@localhost:27018/",
+    "DatabaseName": "reporthub"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
