--- a/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
+++ b/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
@@ -7,7 +7,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\ReportHub.Application\ReportHub.Application.csproj" />
+		<ProjectReference Include="..\ReportHub.Application\ReportHub.Application.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.3" />
+		<PackageReference Include="MongoDB.Driver" Version="3.2.1" />
+	</ItemGroup>
 </Project>
