--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,17 @@ jobs:
     - name: 📦 Restore dependencies
       run: dotnet restore ReportHub/ReportHub.sln
 
+    - name: 🧰 Install OpenSSL 1.1 for Mongo2Go
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget libssl1.1 || (
+          echo "libssl1.1 not found in apt, trying manual download..." &&
+          wget http://archive.ubuntu.com/ubuntu/pool/main/o/openssl1.1/libssl1.1_1.1.1f-1ubuntu2_amd64.deb &&
+          sudo dpkg -i libssl1.1_1.1.1f-1ubuntu2_amd64.deb
+        )
+
     - name: 🔨 Build solution
       run: dotnet build ReportHub/ReportHub.sln --configuration Release --no-restore
 
     - name: 🧪 Run tests
-      run: dotnet test ReportHub/ReportHub.sln --configuration Release --no-build --logger:"console;verbosity=normal"
+      run: dotnet test ReportHub/ReportHub.sln --configuration Release --no-build --logger:"console;verbosity=detailed"
