Serilog file logger created

--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -2,7 +2,8 @@
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
-      "Serilog.Sinks.Seq"
+      "Serilog.Sinks.Seq",
+      "Serilog.Sinks.File"
     ],
     "MinimumLevel": {
       "Default": "Information",
@@ -23,6 +24,14 @@
         "Name": "Seq",
         "Args": {
           "serverUrl": "http://localhost:5341"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
       }
     ],
