--- a/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
+++ b/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
@@ -14,5 +14,6 @@
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.3" />
 		<PackageReference Include="MongoDB.Driver" Version="3.2.1" />
+		<PackageReference Include="Serilog" Version="4.2.0" />
 	</ItemGroup>
 </Project>
