--- a/ReportHub/ReportHub.Application/ReportHub.Application.csproj
+++ b/ReportHub/ReportHub.Application/ReportHub.Application.csproj
@@ -9,7 +9,8 @@
 	<ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="14.0.0" />
 	  <PackageReference Include="MediatR" Version="12.4.1" />
-	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
+	  <PackageReference Include="Serilog" Version="4.2.0" />
+	  <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
