Added get endpoint

--- a/ReportHub/ReportHub.Application/ReportHub.Application.csproj
+++ b/ReportHub/ReportHub.Application/ReportHub.Application.csproj
@@ -20,9 +20,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Features\Commands\" />
-		<Folder Include="Features\Handlers\CommandHandlers\" />
-		<Folder Include="Features\Invoices\" />
+		<Folder Include="Features\Invoices\Commands\" />
+		<Folder Include="Features\Invoices\Handlers\CommandHandlers\" />
 	</ItemGroup>
 
 </Project>
