add auth settings

--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -35,5 +35,9 @@
   "MongoDb": {
     "ConnectionString": "mongodb://admin:admin@localhost:27018/",
     "DatabaseName": "reporthub"
+  },
+  "Authentication": {
+    "Audience": "http://localhost:5190",
+    "Issuer": "http://localhost:5027"
   }
 }
