--- a/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
+++ b/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
+		<PackageReference Include="EPPlus" Version="8.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.3" />
 		<PackageReference Include="MongoDB.Driver" Version="3.2.1" />
