--- a/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
+++ b/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
@@ -11,6 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="ClosedXML" Version="0.104.2" />
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
 		<PackageReference Include="EPPlus" Version="8.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
