--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -37,7 +37,6 @@
     "DatabaseName": "reporthub"
   },
   "Authentication": {
-    "Audience": "http://localhost:5190",
-    "Issuer": "http://localhost:5027"
+    "Issuer": "https://localhost:7171"
   }
 }
