fix token validation

--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -37,6 +37,6 @@
     "DatabaseName": "reporthub"
   },
   "Authentication": {
-    "Issuer": "https://localhost:7171"
+    "Issuer": "https://localhost:7171/"
   }
 }
