--- a/ReportHub/ReportHub.Identity/appsettings.json
+++ b/ReportHub/ReportHub.Identity/appsettings.json
@@ -11,7 +11,7 @@
     "DatabaseName": "IdentityDB"
   },
   "Authentication": {
-    "Issuer": "https://localhost:7171",
+    "Issuer": "https://localhost:7171/",
     "AccessTokenLifeTimeMinutes": 60
   }
 }
