Docker compose removed

--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -2,7 +2,6 @@
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
-      "Serilog.Sinks.Seq",
       "Serilog.Sinks.File"
     ],
     "MinimumLevel": {
@@ -21,12 +20,6 @@
         }
       },
       {
-        "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341"
-        }
-      },
-      {
         "Name": "File",
         "Args": {
           "path": "Logs/log.txt",
@@ -42,7 +35,7 @@
     ]
   },
   "MongoDb": {
-    "ConnectionString": "mongodb://admin:admin@localhost:27018/",
+    "ConnectionString": "mongodb+srv://admin:admin@reporthubcluster.lvjlil0.mongodb.net/?retryWrites=true&w=majority&appName=ReportHubCluster",
     "DatabaseName": "reporthub"
   },
   "Authentication": {
