--- a/ReportHub/ReportHub.Identity/appsettings.json
+++ b/ReportHub/ReportHub.Identity/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoDb": {
-    "ConnectionString": "mongodb://admin:admin@localhost:27018/",
+    "ConnectionString": "mongodb+srv://admin:admin@reporthubcluster.lvjlil0.mongodb.net/?retryWrites=true&w=majority&appName=ReportHubCluster",
     "DatabaseName": "IdentityDB"
   },
   "Authentication": {
