--- a/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
+++ b/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="AspNetCore.Identity.Mongo" Version="10.1.0" />
       <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="6.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
       <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
       <PackageReference Include="OpenIddict" Version="6.2.0" />
       <PackageReference Include="OpenIddict.Client.AspNetCore" Version="6.2.0" />
