--- a/ReportHub/ReportHub.Identity/Properties/launchSettings.json
+++ b/ReportHub/ReportHub.Identity/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": ".well-known/openid-configuration",
-      "applicationUrl": "https://localhost:7153;",
+      "applicationUrl": "https://localhost:7153;https://localhost:7171",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
