--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Deploy ReportHub.API
         if: github.ref == 'refs/heads/main'
         env:
-          deploy_url_api: ${{ secrets.RENDER_DEPLOY_HOOK_URL_API }}
+          deploy_url_api: https://api.render.com/deploy/srv-cvsammq4d50c738c22i0?key=IFxHillN7Qs
         run: |
           echo "🚀 Triggering deployment for ReportHub.API..."
           curl "$deploy_url_api"
