--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Deploy ReportHub.Identity
         if: github.ref == 'refs/heads/main'
         env:
-          deploy_url_identity: ${{ secrets.RENDER_DEPLOY_HOOK_URL_IDENTITY }}
+          deploy_url_identity: https://api.render.com/deploy/srv-cvsammq4d50c738c22i0?key=IFxHillN7Qs
         run: |
           echo "🚀 Triggering deployment for ReportHub.Identity..."
           curl "$deploy_url_identity"
