add interface and repository with db changes

--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -43,7 +43,8 @@
   },
   "MongoDb": {
     "ConnectionString": "mongodb://admin:admin@localhost:27018/",
-    "DatabaseName": "reporthub"
+    "DatabaseName": "reporthub",
+    "ClientsCollectionName": "Clients"
   },
   "Authentication": {
     "Issuer": "https://localhost:7171/"
