add get all for clients endpoint

--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -43,8 +43,7 @@
   },
   "MongoDb": {
     "ConnectionString": "mongodb://admin:admin@localhost:27018/",
-    "DatabaseName": "reporthub",
-    "ClientsCollectionName": "Clients"
+    "DatabaseName": "reporthub"
   },
   "Authentication": {
     "Issuer": "https://localhost:7171/"
