--- a/ReportHub/ReportHub.Application/ReportHub.Application.csproj
+++ b/ReportHub/ReportHub.Application/ReportHub.Application.csproj
@@ -20,7 +20,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Features\Clients\" />
+		<Folder Include="Features\Clients\Commands\" />
+		<Folder Include="Features\Clients\Handlers\CommandHandlers\" />
 		<Folder Include="Features\Invoices\Commands\" />
 		<Folder Include="Features\Invoices\Handlers\CommandHandlers\" />
 	</ItemGroup>
