--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -39,6 +39,6 @@
     "DatabaseName": "reporthub"
   },
   "Authentication": {
-    "Issuer": "https://localhost:7171/"
+    "Issuer": "https://localhost:7171"
   }
 }
