--- a/ReportHub/ReportHub.Application/ReportHub.Application.csproj
+++ b/ReportHub/ReportHub.Application/ReportHub.Application.csproj
@@ -22,6 +22,7 @@
 	<ItemGroup>
 		<Folder Include="Features\Invoices\Commands\" />
 		<Folder Include="Features\Invoices\Handlers\CommandHandlers\" />
+		<Folder Include="Validators\InvoiceValidators\" />
 	</ItemGroup>
 
 </Project>
