--- a/ReportHub/ReportHub.Identity/Properties/launchSettings.json
+++ b/ReportHub/ReportHub.Identity/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "OpenIdDictSample.Server": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": ".well-known/openid-configuration",
       "applicationUrl": "https://localhost:7153;https://localhost:7171",
       "environmentVariables": {
@@ -12,7 +12,7 @@
     },
     "http": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -21,7 +21,7 @@
     },
     "https": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -30,7 +30,7 @@
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/.well-known/openid-configuration",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
