changed issur to local

--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -39,6 +39,6 @@
     "DatabaseName": "reporthub"
   },
   "Authentication": {
-    "Issuer": "https://exadel-reporthub-api-identity.onrender.com/"
+    "Issuer": "https://localhost:7171"
   }
 }
