--- a/ReportHub.Tests/ReportHub.Tests.csproj
+++ b/ReportHub.Tests/ReportHub.Tests.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="coverlet.collector" Version="6.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.2" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
 		<PackageReference Include="Mongo2Go" Version="4.1.0" />
 		<PackageReference Include="Moq" Version="4.20.72" />
