--- a/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
+++ b/ReportHub/ReportHub.Infrastructure/ReportHub.Infrastructure.csproj
@@ -22,4 +22,8 @@
 		<PackageReference Include="MongoDB.Driver" Version="3.2.1" />
 		<PackageReference Include="Serilog" Version="4.2.0" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Middleware\" />
+	</ItemGroup>
 </Project>
