--- a/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
+++ b/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="AspNetCore.Identity.Mongo" Version="10.1.0" />
       <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="6.0.0" />
+      <PackageReference Include="MediatR" Version="12.5.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
       <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
