--- a/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
+++ b/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="AspNetCore.Identity.Mongo" Version="10.1.0" />
       <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="6.0.0" />
+      <PackageReference Include="AutoMapper" Version="14.0.0" />
       <PackageReference Include="MediatR" Version="12.5.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
