--- a/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
+++ b/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
@@ -12,6 +12,8 @@
       <PackageReference Include="AspNetCore.Identity.Mongo" Version="10.1.0" />
       <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="6.0.0" />
       <PackageReference Include="AutoMapper" Version="14.0.0" />
+      <PackageReference Include="FluentValidation" Version="11.11.0" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
       <PackageReference Include="MediatR" Version="12.5.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
