--- a/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
+++ b/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
@@ -15,16 +15,17 @@
       <PackageReference Include="FluentValidation" Version="11.11.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
       <PackageReference Include="MediatR" Version="12.5.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
-      <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
-      <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
-      <PackageReference Include="OpenIddict" Version="6.2.0" />
-      <PackageReference Include="OpenIddict.Client.AspNetCore" Version="6.2.0" />
-      <PackageReference Include="OpenIddict.MongoDb" Version="6.2.0" />
-      <PackageReference Include="OpenIddict.Server.AspNetCore" Version="6.2.0" />
-      <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="6.2.0" />
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
-      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
+      <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
+      <PackageReference Include="MongoDB.Driver" Version="3.3.0" />
+      <PackageReference Include="OpenIddict" Version="6.2.1" />
+      <PackageReference Include="OpenIddict.Client.AspNetCore" Version="6.2.1" />
+      <PackageReference Include="OpenIddict.MongoDb" Version="6.2.1" />
+      <PackageReference Include="OpenIddict.Server" Version="6.2.1" />
+      <PackageReference Include="OpenIddict.Server.AspNetCore" Version="6.2.1" />
+      <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="6.2.1" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.8.0" />
     </ItemGroup>
 
     <ItemGroup>
