added login and refresh token commands

--- a/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
+++ b/ReportHub/ReportHub.Identity/ReportHub.Identity.csproj
@@ -27,4 +27,8 @@
       <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.8.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Application\Validators\AuthValidators\" />
+    </ItemGroup>
 </Project>
