--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -40,5 +40,13 @@
   },
   "Authentication": {
     "Issuer": "https://localhost:7171"
+  },
+  "EmailSettings": {
+    "Sender": "nika.chkhartishvili7@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": "465",
+    "UseSsl": "true",
+    "Username": "nika.chkhartishvili7@gmail.com",
+    "Password": "iewu xuso begl sfba"
   }
 }
