--- a/ReportHub/Reporthub.Identity.SpecflowTests/Reporthub.Identity.SpecflowTests.csproj
+++ b/ReportHub/Reporthub.Identity.SpecflowTests/Reporthub.Identity.SpecflowTests.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="NUnit.Analyzers" Version="4.4.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+    <PackageReference Include="SpecFlow" Version="3.9.74" />
+    <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
   </ItemGroup>
 
   <ItemGroup>
