--- a/ReportHub/ReportHub.Web/ReportHub.Web.csproj
+++ b/ReportHub/ReportHub.Web/ReportHub.Web.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+	  <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
 	</ItemGroup>
 
 </Project>
