full login is covered with test

--- a/ReportHub/ReportHub.API/appsettings.json
+++ b/ReportHub/ReportHub.API/appsettings.json
@@ -39,7 +39,7 @@
     "DatabaseName": "reporthub"
   },
   "Authentication": {
-    "Issuer": "https://localhost:7171"
+    "Issuer": "https://localhost:7171/"
   },
   "EmailSettings": {
     "Sender": "nika.chkhartishvili7@gmail.com",
