Server side communication

--- a/ReportHub/ReportHub.Web/appsettings.json
+++ b/ReportHub/ReportHub.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Refit": {
-    "BaseAddress": "https://localhost:7153"
+    "BaseAddress": "http://localhost:5190"
   },
   "AllowedHosts": "*"
 }
