client crud is covered with specflow test

--- a/ReportHub/ReportHub.Identity.IntegrationTests/ReportHub.Identity.IntegrationTests.csproj
+++ b/ReportHub/ReportHub.Identity.IntegrationTests/ReportHub.Identity.IntegrationTests.csproj
@@ -22,10 +22,10 @@
 
   <ItemGroup>
     <Folder Include="Drivers\" />
-    <Folder Include="Support\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ReportHub.API\ReportHub.API.csproj" />
     <ProjectReference Include="..\ReportHub.Identity\ReportHub.Identity.csproj" />
   </ItemGroup>
 
