--- a/ReportHub/ReportHub.Web/appsettings.json
+++ b/ReportHub/ReportHub.Web/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "Refit": {
-    "BaseAddress": "http://localhost:5190"
+    //"BaseAddress": "http://localhost:5190"
+    "BaseAddress": "https://exadel-reporthub.onrender.com"
   },
   "AllowedHosts": "*"
 }
