--- a/ReportHub/ReportHub.Web/Dockerfile
+++ b/ReportHub/ReportHub.Web/Dockerfile
@@ -1,19 +1,19 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+
 COPY ["ReportHub.Web/ReportHub.Web.csproj", "ReportHub.Web/"]
+
 RUN dotnet restore "./ReportHub.Web/ReportHub.Web.csproj"
+
 COPY . .
 WORKDIR "/src/ReportHub.Web"
 RUN dotnet build "./ReportHub.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
@@ -27,4 +27,7 @@ RUN dotnet publish "./ReportHub.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publ
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+ENV ASPNETCORE_URLS=http://+:8080
+
 ENTRYPOINT ["dotnet", "ReportHub.Web.dll"]
