--- a/ReportHub/ReportHub.Web/appsettings.json
+++ b/ReportHub/ReportHub.Web/appsettings.json
@@ -6,8 +6,10 @@
     }
   },
   "Refit": {
-    //"BaseAddress": "http://localhost:5190"
-    "BaseAddress": "https://exadel-reporthub.onrender.com"
+    "BaseAddressApi": "http://localhost:5190",
+    //"BaseAddress": "https://exadel-reporthub.onrender.com",
+    "BaseAddressAuth": "https://localhost:7171"
+    //"BaseAddress": "https://exadel-reporthub-identity.onrender.com"
   },
   "AllowedHosts": "*"
 }
