Add new item UI

--- a/ReportHub/ReportHub.Web/ReportHub.Web.csproj
+++ b/ReportHub/ReportHub.Web/ReportHub.Web.csproj
@@ -14,4 +14,9 @@
 	  <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Models\Invoice\" />
+	  <Folder Include="Services\Invoice\" />
+	</ItemGroup>
+
 </Project>
