--- a/ReportHub/ReportHub.Web/ReportHub.Web.csproj
+++ b/ReportHub/ReportHub.Web/ReportHub.Web.csproj
@@ -13,6 +13,7 @@
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.8.0" />
 	</ItemGroup>
 
 </Project>
