--- a/ReportHub/ReportHub.Web/appsettings.json
+++ b/ReportHub/ReportHub.Web/appsettings.json
@@ -8,7 +8,7 @@
   "Refit": {
     "BaseAddressApi": "http://localhost:5190",
     //"BaseAddress": "https://exadel-reporthub.onrender.com",
-    "BaseAddressAuth": "https://localhost:7171"
+    "BaseAddressAuth": "https://localhost:7171",
     //"BaseAddress": "https://exadel-reporthub-identity.onrender.com"
     "BaseAddress": "http://localhost:5190"
     //"BaseAddress": "https://exadel-reporthub.onrender.com"
