--- a/ReportHub/ReportHub.API/Properties/launchSettings.json
+++ b/ReportHub/ReportHub.API/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5190" //https://localhost:7153;
+      "applicationUrl": "https://localhost:7153;http://localhost:5190"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
